--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@ body{
   background-color: #8ac
 }
 
+.button3{
+  height:25px;
+  border-radius: 5px;
+  background-color: #8ac
+}
 
 </style>
 <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
@@ -42,6 +47,7 @@ body{
 <div class="mainContainer">
 <button class="button1">run function1</button>
 <button class="button2">run function2</button>
+<button class="button3">run function3</button>
 <div contenteditable="true" class="textbox"></div>
 <div class="infoDiv"></div>
 </div>
@@ -76,12 +82,42 @@ document.querySelector('.button1').addEventListener("click", function(){
 //TODO: make function to toggle display command options
 document.querySelector('.button2').addEventListener("click", function(){
 
+
+function apiCall(){
+  $.getJSON('https://api.datamuse.com/words?rel_rhy=plan')
+  .then(function(response){
+    console.log(response);
+  });
+}
+apiCall();
+
+
+// function apiCall2(){
+//   $.ajax({
+//           crossDomain: true,
+//           url:'https://api.datamuse.com/words?rel_rhy=plan',
+//           method: 'GET',
+//           headers:{
+//               'Access-Control-Allow-Origin':'*'
+//           },
+//           success: function(response) {
+//               console.log(response);
+//           }
+//         });
+// };
+// apiCall2();
+
+
+
 // $.get('https://api.datamuse.com/words?rel_rhy=plan', function(results){console.log(results)});
 //  console.log();
-var request = new Request('https://api.datamuse.com/words?rel_rhy=plan');
-console.log(request);
-fetch(request).then(function(response){
-console.log(response);});
+
+// var request = new Request('https://api.datamuse.com/words?rel_rhy=plan');
+// console.log(request);
+// fetch(request).then(function(response){
+// console.log(response);});
+
+
 
 });
 
@@ -135,18 +171,43 @@ function randomWord(string){
 };
 
 //updates stats at bottom of page
+//TODO: maybe more stats?
 function updateStats(){
   getText();
+
+  //object of vocab:count
+  var textO = {};
+  for (var i = 0; i < inputA.length; i++) {
+    var word = inputA[i].trim();
+    if(textO[word] === undefined){textO[word] = 1;}
+    else {textO[word]++;}
+  }
+
+  //vocab count, and word count string
+  var totalWords = 0;
+  var vocab = 0;
+  var wordCountS = '<ul>';
+  for(var key in textO){
+    if(key !== ''){
+      vocab++;
+      totalWords += textO[key];
+      wordCountS += '<li>"' + key + '": ' + textO[key] + '</li>';
+    }
+  }
+  wordCountS += '</ul>';
+
+  //html string
   var html = '';
-  html += 'Word count: ' + inputA.length;
-  //TODO: more stats, each word count, vocabulary size, etc.
+  html += '<p>Word count: ' + totalWords + '</p>';
+  html += 'Vocabulary: ' + vocab;
+  html += wordCountS;
+
+  //print stats
   document.querySelector('.infoDiv').innerHTML = html;
-  updateView();
 };
 
 //gets text from text field as a global array inputA
 function getText(){
-  //TODO: needs to be recoded to factor other white space ' ' && '\n' && '\t'
   inputA = document.querySelector('.textbox').innerText.split(' ');
 };
 
