--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@ body{
 }
 
 .mainContainer{
+    transition-duration: 2s;
 }
 
 .textbox{
@@ -22,20 +23,30 @@ body{
 .button1{
   height:25px;
   border-radius: 5px;
-  background-color: #8ac
+  background-color: #8ac;
 }
 
 .button2{
   height:25px;
   border-radius: 5px;
-  background-color: #8ac
+  background-color: #8ac;
 }
 
 .button3{
   height:25px;
   border-radius: 5px;
-  background-color: #8ac
+  background-color: #8ac;
 }
+
+.hideli{
+  list-style-type: none;
+}
+
+.instructions{
+  display: none;
+}
+
+
 
 </style>
 <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
@@ -43,11 +54,25 @@ body{
 </head>
 <body>
 
-
 <div class="mainContainer">
-<button class="button1">run function1</button>
+
+<div class="instructions">
+<h3>Commands:</h3>
+;word and <i>spacebar</i> - to begin
+<ul class="hideli">
+  <li>x; - for random word (; - will repeat the command)</li>
+  <li>s; - for similar meaning word (; - will repeat the command)</li>
+  <li>r; - for rhyming word (; - will repeat the command)</li>
+  <li>j; - for adjective associated with that word (; - will repeat the command)</li>
+  <li><i>delete/backspace</i> - to delete the word</li>
+  <li><i>spacebar</i> - to accept the word</li>
+</ul>
+</div>
+
+<button class="button1">commands</button>
 <button class="button2">run function2</button>
 <button class="button3">run function3</button>
+
 <div contenteditable="true" class="textbox"></div>
 <div class="infoDiv"></div>
 </div>
@@ -70,64 +95,27 @@ var lastWord = ''; //last word being processed
 
 
 
-//BUTTONS
-//buttons are for testing functionality before replacing their invocation with text commands
-
-//on button click
-//replaces words starting with a semicolon with calls function randomWord
+//button1 to toggle diplaying instruction commands
 document.querySelector('.button1').addEventListener("click", function(){
-  inputA = document.querySelector('.textbox').innerText.split(' ');
-  for (var i = 0; i < inputA.length; i++) {
-    if(inputA[i][0] === ';'){
-      commandLog.push(inputA[i]);
-      inputA[i] = randomWord(inputA[i]);
-    }
+  if(document.getElementsByClassName('instructions')[0].style.display=='block'){
+    document.getElementsByClassName('instructions')[0].style.display='none';
+  } else {
+    document.getElementsByClassName('instructions')[0].style.display='block';
   }
-  document.querySelector('.textbox').innerText = inputA.join(' ');
 });
+
 
 //on button2 click
 //TODO: make function to toggle display command options
 document.querySelector('.button2').addEventListener("click", function(){
 
 
-function apiCall(){
-  $.getJSON('https://api.datamuse.com/words?rel_rhy=plan')
-  .then(function(response){
-    console.log(response);
-  });
-}
-apiCall();
-
-
-// function apiCall2(){
-//   $.ajax({
-//           crossDomain: true,
-//           url:'https://api.datamuse.com/words?rel_rhy=plan',
-//           method: 'GET',
-//           headers:{
-//               'Access-Control-Allow-Origin':'*'
-//           },
-//           success: function(response) {
-//               console.log(response);
-//           }
-//         });
-// };
-// apiCall2();
-
-
-
-// $.get('https://api.datamuse.com/words?rel_rhy=plan', function(results){console.log(results)});
-//  console.log();
-
-// var request = new Request('https://api.datamuse.com/words?rel_rhy=plan');
-// console.log(request);
-// fetch(request).then(function(response){
-// console.log(response);});
-
 
 
 });
+
+
+
 
 
 
@@ -156,25 +144,19 @@ document.addEventListener("keyup", function(event){
 
 
 
-
 function command(string){
   lastWord = commandLog[commandLog.length-1].slice(1);
   document.addEventListener("keyup", anotherCommand);
   //TODO:build out more commands
   string = string.trim();
-  // console.log('string, "'+string+'"');
   if(string === ';rand' || string === ';'){
     lastCommand = function(string){inputA[inputA.length-1] = randomWord();};
     lastCommand(string);
     updateView();
 
   }
-  // else {
-  //   wordbank = apiCall(string);
-  // }
-
-
 };
+
 
 function anotherCommand(event){
   console.log('second command: ', event.which);
@@ -214,7 +196,7 @@ function anotherCommand(event){
 
 
 
-//call api for similar words
+//call api for similar meaning words
 function apiCallSim(string){
   $.getJSON('https://api.datamuse.com/words?ml='+string)
   .then(function(response){
